# apex-ledger

./: README.md  pyproject.toml
db/: schema.sql
docker/: docker-compose.yml
docs/: DOMAIN_NOTES.md
src/: event_store.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/integrity/: audit_chain.py
src/mcp/: server.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py
src/regulatory/: package.py
src/upcasting/: registry.py  upcasters.py
src/what_if/: projector.py
tests/: test_concurrency.py  test_upcasting.py
