[project]
name = "apex-ledger"
version = "0.1.0"
description = "Agentic Event Store and Enterprise Audit Infrastructure — The Ledger"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.29.0,<0.30",
    "pydantic>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "fastmcp>=0.9.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
